feat: add to CI pre-merge

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -236,6 +236,19 @@ jobs:
           "s3://cache.sc.iog.io?secret-key=${{ runner.temp }}/nix-key&region=$AWS_DEFAULT_REGION" \
           && rm /tmp/outputs
 
+  documentation-tests:
+    needs: build-linux-x86_64-pre-merge
+    if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}
+      - name: Run Documentation Tests
+        uses: ./.github/actions/tests/setup-python
+
   upload-chain-specs-pre-merge:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
     needs: build-linux-x86_64-pre-merge
@@ -257,7 +270,7 @@ jobs:
 
   pre-merge-checks-complete:
     if: ${{ always() && github.event_name == 'pull_request' && github.event.pull_request.merged == false }}
-    needs: [build-linux-x86_64-pre-merge, local-environment-tests, devshell-tests, upload-chain-specs-pre-merge]
+    needs: [build-linux-x86_64-pre-merge, local-environment-tests, devshell-tests, upload-chain-specs-pre-merge, documentation-tests]
     runs-on: ubuntu-latest
     steps:
       - name: Check if any needed job failed
@@ -265,12 +278,14 @@ jobs:
           if [[ "${{ needs.build-linux-x86_64-pre-merge.result }}" != "success" ||
                 "${{ needs.local-environment-tests.result }}" != "success" ||
                 "${{ needs.devshell-tests.result }}" != "success" ||
-                "${{ needs.upload-chain-specs-pre-merge.result }}" != "success" ]]; then
+                "${{ needs.upload-chain-specs-pre-merge.result }}" != "success" ||
+                "${{ needs.documentation-tests.result }}" != "success" ]]; then
             echo "One or more needed jobs failed."
             exit 1
           else
             echo "All needed jobs passed."
           fi
+
 
 #  pre-merge-checks-complete:
 #    if: ${{ always() && github.event_name == 'pull_request' && github.event.pull_request.merged == false }}
