--- a/toolkit/data-sources/db-sync/Cargo.toml
+++ b/toolkit/data-sources/db-sync/Cargo.toml
@@ -55,6 +55,7 @@ sp-block-participation = { workspace = true, features = [
 tokio-test = "0.4.3"
 ctor = "0.4.1"
 testcontainers-modules = { version = "0.1.3", features = ["postgres"] }
+pretty_assertions = { workspace = true }
 
 [features]
 default = []
