fix: node_template > partner_chains_demo_node

--- a/.github/actions/deploy/deploy-rustdoc/action.yml
+++ b/.github/actions/deploy/deploy-rustdoc/action.yml
@@ -40,7 +40,7 @@ runs:
       shell: bash
 
     - name: Make index.html
-      run: echo "<meta http-equiv=refresh content=0;url=node_template/index.html>" > ./target/doc/index.html
+      run: echo "<meta http-equiv=refresh content=0;url=partner_chains_demo_node/index.html>" > ./target/doc/index.html
       shell: bash
 
     - name: Deploy documentation
