--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -507,7 +507,7 @@ jobs:
   deploy-rustdoc:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
     needs: build-linux-x86_64-post-merge
-    runs-on: ubuntu-latest
+    runs-on: nixos
     steps:
       - name: Checkout
         uses: actions/checkout@v4
