--- a/.github/actions/deploy/deploy-rustdoc/action.yml
+++ b/.github/actions/deploy/deploy-rustdoc/action.yml
@@ -21,6 +21,12 @@ runs:
         ssh-add - <<< "${{ inputs.ssh_key }}"
       shell: bash
 
+    - name: Install Nix
+      run: |
+        sh <(curl -L https://nixos.org/nix/install) --daemon
+        . /nix/var/nix/profiles/default/etc/profile.d/nix-daemon.sh
+      shell: bash
+
     - name: Build rustdocs
       run: nix develop .#nightly -c gen-cargo-docs
       shell: bash
