--- a/.github/actions/deploy/deploy-rustdoc/action.yml
+++ b/.github/actions/deploy/deploy-rustdoc/action.yml
@@ -21,17 +21,10 @@ runs:
         ssh-add - <<< "${{ inputs.ssh_key }}"
       shell: bash
 
-    - name: Install Nix
-      run: |
-        sh <(curl -L https://nixos.org/nix/install) --daemon
-        . /nix/var/nix/profiles/default/etc/profile.d/nix-daemon.sh
-      shell: bash
-    
     - name: Build rustdocs
-      run: |
-        . /nix/var/nix/profiles/default/etc/profile.d/nix-daemon.sh
-        export NIX_CONFIG="experimental-features = nix-command flakes"
-        nix develop .#nightly -c gen-cargo-docs
+      steps:
+        - uses: DeterminateSystems/nix-installer-action@main
+        - run: nix develop .#nightly -c gen-cargo-docs
       shell: bash
 
     - name: Deploy documentation
