deploy-rustdoc: use gen-cargo-doc from default shell

--- a/.github/actions/deploy/deploy-rustdoc/action.yml
+++ b/.github/actions/deploy/deploy-rustdoc/action.yml
@@ -14,9 +14,9 @@ runs:
     - name: Install Nix
       uses: DeterminateSystems/nix-installer-action@main
 
-    - name: Build Rustdocs 
+    - name: Build Rustdocs
       run: |
-        nix develop .#nightly -c gen-cargo-docs
+        nix develop -c gen-cargo-docs
       shell: bash
 
     - name: Deploy documentation
