--- a/.github/actions/deploy/deploy-rustdoc/action.yml
+++ b/.github/actions/deploy/deploy-rustdoc/action.yml
@@ -19,6 +19,7 @@ runs:
     - name: generate rust docs
       run: |
         RUSTDOCFLAGS="--enable-index-page -Zunstable-options" SKIP_WASM_BUILD=1 cargo doc --no-deps
+      shell: bash
 
     - name: Deploy documentation
       if: ${{ github.ref_name == 'master' }}
