--- a/.github/actions/deploy/deploy-rustdoc/action.yml
+++ b/.github/actions/deploy/deploy-rustdoc/action.yml
@@ -16,6 +16,10 @@ runs:
       with:
         components: rust-docs
 
+    - name: install protoc
+      run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
+      shell: bash
+
     - name: generate rust docs
       run: |
         RUSTDOCFLAGS="--enable-index-page -Zunstable-options" SKIP_WASM_BUILD=1 cargo doc --no-deps
