--- a/.github/actions/deploy/deploy-rustdoc/action.yml
+++ b/.github/actions/deploy/deploy-rustdoc/action.yml
@@ -11,8 +11,10 @@ runs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Install Rust toolchain (nightly)
-      uses: dtolnay/rust-toolchain@nightly
+    - name: install rust
+      uses: actions-rust-lang/setup-rust-toolchain@v1
+      with:
+        toolchain: nightly
 
     - name: install protoc
       run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
