--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,65 +25,6 @@ jobs:
 
 ### Pre merge workflow ###############################################################################################################
 
-#  ci-preview-direct-tests-pre-merge:
-#    if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v4
-#        with:
-#          fetch-depth: 0
-#          ref: ${{ github.event.pull_request.head.sha || github.sha }}
-#      - name: Setup tests
-#        uses: ./.github/actions/tests/setup-python
-#        env:
-#          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
-#          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
-#          K8S_SERVER: ${{ secrets.K8S_SERVER }}
-#          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
-#      - name: Run direct kubectl exec tests against ci-preview
-#        uses: ./.github/actions/tests/k8s-direct-tests
-#        with:
-#          namespace: ci-preview
-#          pod: ci-preview-validator-1
-#        env:
-#          AWS_REGION: "eu-central-1"
-#          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
-#          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
-#          AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_ROLE_ARN_SECRET }}
-#          ECR_REGISTRY_SECRET: ${{ secrets.ECR_REGISTRY_SECRET }}
-#          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
-#          K8S_SERVER: ${{ secrets.K8S_SERVER }}
-#          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
-#  ci-preview-e2e-tests-pre-merge:
-#    if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
-#    runs-on: eks
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v4
-#        with:
-#          fetch-depth: 0
-#          ref: ${{ github.event.pull_request.head.sha || github.sha }}
-#      - name: Setup tests
-#        uses: ./.github/actions/tests/setup-python
-#        env:
-#          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
-#          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
-#          K8S_SERVER: ${{ secrets.K8S_SERVER }}
-#          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
-#      - name: Run pytests against ci-preview over kubectl exec
-#        uses: ./.github/actions/tests/k8s-e2e-tests
-#        with:
-#          env: ci
-#          decrypt: true
-#          blockchain: substrate
-#      - name: Test against ci-preview
-#        uses: ./.github/actions/tests/run-e2e-tests
-#        with:
-#          env: ci
-#          decrypt: true
-#          blockchain: substrate
-
   build-linux-x86_64-pre-merge:
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
@@ -285,21 +226,6 @@ jobs:
           else
             echo "All needed jobs passed."
           fi
-
-
-#  pre-merge-checks-complete:
-#    if: ${{ always() && github.event_name == 'pull_request' && github.event.pull_request.merged == false }}
-#    needs: [ci-preview-tests-pre-merge]
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Check if any needed job failed
-#        run: |
-#          if [[ "${{ needs.ci-preview-tests-pre-merge.result }}" != "success" ]]; then
-#            echo "One or more needed jobs failed."
-#            exit 1
-#          else
-#            echo "All needed jobs passed."
-#          fi
 
 ### Post merge workflow ###############################################################################################################
 
@@ -507,7 +433,7 @@ jobs:
   deploy-rustdoc:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
     needs: build-linux-x86_64-post-merge
-    runs-on: nixos
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -516,11 +442,8 @@ jobs:
           ref: master
       - name: Deploy Rust Docs
         uses: ./.github/actions/deploy/deploy-rustdoc
-        with:
-          ssh_key: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
 
   local-environment-tests-post-merge:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
