--- a/.github/actions/tests/setup-python/action.yml
+++ b/.github/actions/tests/setup-python/action.yml
@@ -17,11 +17,12 @@ runs:
         sudo apt install -qq -y software-properties-common > /dev/null 2>&1
         sudo add-apt-repository -y ppa:deadsnakes/ppa > /dev/null 2>&1
         sudo apt update -qq > /dev/null 2>&1
-        sudo apt install -qq -y python3.12 python3.12-venv python3.12-dev > /dev/null 2>&1
-        sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.12 1 > /dev/null 2>&1
+        sudo apt install -qq -y python3.11 python3.11-venv python3.11-dev > /dev/null 2>&1
+        sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1 > /dev/null 2>&1
         curl -L --silent https://github.com/getsops/sops/releases/download/v3.7.3/sops_3.7.3_amd64.deb > sops.deb && sudo dpkg -i sops.deb > /dev/null 2>&1 && rm sops.deb
         python -m venv venv > /dev/null 2>&1
         source venv/bin/activate
-        pip install -q -r requirements.txt
+        python -m pip install --upgrade pip setuptools wheel
+        pip install -q -r requirements.txt || { echo "❌ Failed to install Python dependencies"; exit 1; }
         cd ..
       shell: bash
