--- a/.github/actions/tests/setup-python/action.yml
+++ b/.github/actions/tests/setup-python/action.yml
@@ -13,16 +13,15 @@ runs:
     - name: Setup python and dependencies
       run: |
         cd e2e-tests
-        sudo apt update -qq > /dev/null 2>&1
-        sudo apt install -qq -y software-properties-common > /dev/null 2>&1
-        sudo add-apt-repository -y ppa:deadsnakes/ppa > /dev/null 2>&1
-        sudo apt update -qq > /dev/null 2>&1
-        sudo apt install -qq -y python3.11 python3.11-venv python3.11-dev > /dev/null 2>&1
-        sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1 > /dev/null 2>&1
-        curl -L --silent https://github.com/getsops/sops/releases/download/v3.7.3/sops_3.7.3_amd64.deb > sops.deb && sudo dpkg -i sops.deb > /dev/null 2>&1 && rm sops.deb
-        python -m venv venv > /dev/null 2>&1
+        sudo apt update
+        sudo apt install -y software-properties-common
+        sudo add-apt-repository ppa:deadsnakes/ppa
+        sudo apt update
+        sudo apt install -y python3.12 python3.12-venv python3.12-dev
+        sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.12 1
+        curl -L --silent https://github.com/getsops/sops/releases/download/v3.7.3/sops_3.7.3_amd64.deb > sops.deb && sudo dpkg -i sops.deb && rm sops.deb
+        python -m venv venv
         source venv/bin/activate
-        python -m pip install --upgrade pip setuptools wheel
-        pip install -q -r requirements.txt || { echo "❌ Failed to install Python dependencies"; exit 1; }
+        pip install -r requirements.txt
         cd ..
       shell: bash
