change: ETCM-9800 track and handle initialization of the governed map pallet

--- a/toolkit/governed-map/primitives/Cargo.toml
+++ b/toolkit/governed-map/primitives/Cargo.toml
@@ -28,6 +28,7 @@ thiserror = { workspace = true, optional = true }
 
 [dev-dependencies]
 tokio = { workspace = true }
+pretty_assertions = { workspace = true }
 
 [features]
 default = ["std"]
