feat: allow ogmios url to be configured via env var.

--- a/toolkit/smart-contracts/commands/Cargo.toml
+++ b/toolkit/smart-contracts/commands/Cargo.toml
@@ -11,7 +11,7 @@ repository.workspace = true
 workspace = true
 
 [dependencies]
-clap = { workspace = true }
+clap = { workspace = true, features = [ "derive", "env" ] }
 sidechain-domain = { workspace = true }
 partner-chains-cardano-offchain = { workspace = true }
 hex = { workspace = true }
