--- a/toolkit/block-producer-fees/pallet/Cargo.toml
+++ b/toolkit/block-producer-fees/pallet/Cargo.toml
@@ -11,6 +11,7 @@ repository.workspace = true
 workspace = true
 
 [dependencies]
+frame-benchmarking = { workspace = true, optional = true }
 frame-support = { workspace = true }
 frame-system = { workspace = true }
 parity-scale-codec = { workspace = true }
@@ -26,9 +27,15 @@ sp-runtime = { workspace = true }
 [features]
 default = ["std"]
 std = [
+	"frame-benchmarking/std",
 	"frame-support/std",
 	"frame-system/std",
 	"parity-scale-codec/std",
 	"scale-info/std",
 	"sp-std/std",
+]
+runtime-benchmarks = [
+	"frame-benchmarking/runtime-benchmarks",
+	"frame-support/runtime-benchmarks",
+	"frame-system/runtime-benchmarks",
 ]
