--- a/toolkit/smart-contracts/plutus-data/Cargo.toml
+++ b/toolkit/smart-contracts/plutus-data/Cargo.toml
@@ -19,6 +19,7 @@ cardano-serialization-lib = { workspace = true }
 thiserror = { workspace = true }
 
 [dev-dependencies]
+raw-scripts = { workspace = true }
 serde_json = { workspace = true }
 hex-literal = { workspace = true }
 pretty_assertions = { workspace = true }
