--- a/Cargo.toml
+++ b/Cargo.toml
@@ -316,7 +316,7 @@ pallet-block-producer-metadata-rpc = { path = "toolkit/block-producer-metadata/r
 sp-block-producer-metadata = { path = "toolkit/block-producer-metadata/primitives", default-features = false }
 
 # Data Sources
-partner-chains-db-sync-data-sources = { path = "toolkit/data-sources/db-sync" }
+partner-chains-db-sync-data-sources = { path = "toolkit/data-sources/db-sync", default-features = false }
 partner-chains-mock-data-sources = { path = "toolkit/data-sources/mock", default-features = false }
 
 # Governed Map
