--- a/toolkit/data-sources/cli/Cargo.toml
+++ b/toolkit/data-sources/cli/Cargo.toml
@@ -17,7 +17,15 @@ workspace = true
 clap = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-partner-chains-db-sync-data-sources = { workspace = true, features = ["block-source", "candidate-source"] }
+partner-chains-db-sync-data-sources = { workspace = true, features = [
+    "block-participation",
+    "block-source",
+    "candidate-source",
+    "governed-map",
+    "mc-hash",
+    "native-token",
+    "sidechain-rpc",
+] }
 tokio = { workspace = true }
 env_logger = { workspace = true }
 log = { workspace = true }
